# fei-CC2632-bank-project-algorithms

./: CMakeLists.txt  README.md  apagar-cliente.c  apagar-cliente.h  cadastrar-cliente.c  cadastrar-cliente.h  cliente.h  debitar-valor-da-conta.c  debitar-valor-da-conta.h  depositar-valor-na-conta-do-banco.c  depositar-valor-na-conta-do-banco.h  gerar-extrato.c  gerar-extrato.h  listar-clientes.c  listar-clientes.h  main.c  main.cpp  transferir_entre_contas_do_banco.c  transferir_entre_contas_do_banco.h
